# -ifc

./: .gitignore  Dockerfile  README.md  build.gradle.kts  docker-compose.yml  gradlew  settings.gradle.kts
native/: CMakeLists.txt
native/include/: IfcToGltfConverter.h  ifcglb_jni.h
native/src/: IfcToGltfConverter.cpp  ifcglb_jni.cpp
scripts/: download-gradle-wrapper.sh
src/main/java/com/example/ifc/: IfcOpenShellBridge.java
src/main/kotlin/com/example/ifc/: Application.kt  ConvertRoute.kt  ConvertService.kt  Models.kt
src/main/resources/: logback.xml
